😘👀 Checkpoint ./public/sender.js:55706575/1559 ./public/sender.html:55706575/195 ./public/style.css:55706575/422

--- a/public/style.css
+++ b/public/style.css
@@ -74,13 +74,8 @@ main{
 
 html, input {
   font-family:
-    "HelveticaNeue-Light",
-    "Helvetica Neue Light",
-    "Helvetica Neue",
-    Helvetica,
-    Arial,
-    "Lucida Grande",
-    sans-serif;
+    "Courier New",
+    monospace;
 }
 
 html, body {
